Phone was too narrow in designer, fixed it.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1142,7 +1142,7 @@ ul.component-actions {
 
 
 .phone-inner {
-  width: 310px;
+
   margin: 0 auto;
 }
 
@@ -2020,6 +2020,8 @@ button.return-btn {
   .phone-border {
     border:  solid 2px #555;
     border-radius: 2px;
+    width: 310px;
+    margin: 0 auto;
   }
 
 }
